--- a/client/style.css
+++ b/client/style.css
@@ -11,15 +11,41 @@ html {
     padding: 10px;
 
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
     align-items: center;
 
     box-shadow: 0 0 10px #000;
     border-radius: 5px;
+
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .header > * {
     margin: 0 3rem;
+    transition: color 0.2s;
+    cursor: pointer;
+}
+
+.header > h1:hover {
+    color: #444;
+}
+
+.links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.links > * {
+    margin: 0 1rem;
+    transition: color 0.2s;
+    cursor: pointer;
+}
+
+.links > *:hover {
+    color: #444;
 }
 
 .header h1 {
@@ -131,8 +157,12 @@ select {
     font-family: monospace;
 }
 
-.copy {
-    position: sticky;
-    bottom: 0;
-    left: 0;
+a {
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.2s;
+}
+
+a:hover {
+    color: #444;
 }
